--- a/src/pages/crypto-news/crypto-news.scss
+++ b/src/pages/crypto-news/crypto-news.scss
@@ -1,3 +1,9 @@
 page-crypto-news {
-
+  .coin-card {
+    padding: 5%;
+    width: 100%;
+    border-bottom-style: solid;
+    border-bottom-color: #d0d0d0;
+    border-bottom-width: 2px;
+  }
 }
