Update Upcoming Coin

--- a/src/pages/crypto-news/crypto-news.scss
+++ b/src/pages/crypto-news/crypto-news.scss
@@ -6,4 +6,7 @@ page-crypto-news {
     border-bottom-color: #d0d0d0;
     border-bottom-width: 2px;
   }
+  .coin-card:hover {
+    background: aliceblue;
+  }
 }
