--- a/src/pages/upcoming-coin/upcoming-coin.scss
+++ b/src/pages/upcoming-coin/upcoming-coin.scss
@@ -1,3 +1,13 @@
 page-upcoming-coin {
+  .coin-card {
+    padding: 5%;
+    width: 100%;
+    border-bottom-style: solid;
+    border-bottom-color: #d0d0d0;
+    border-bottom-width: 2px;
+  }
 
+  .coin-card:hover {
+    background: aliceblue;
+  }
 }
