Add Favourite coin page

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -15,6 +15,9 @@
             <button menuClose ion-item (click)="openPage('CryptoNewsPage')">
                 {{ 'CRYPTO_NEWS' | translate }}
             </button>
+            <button menuClose ion-item (click)="openPage('FavouriteCoinPage')">
+                {{ 'FAVOURITE_COIN' | translate }}
+            </button>
             <button menuClose ion-item (click)="openPage('SettingsPage')">
                 {{ 'MENU_SETTINGS' | translate }}
             </button>
