--- a/src/pages/favourite-coin/favourite-coin.scss
+++ b/src/pages/favourite-coin/favourite-coin.scss
@@ -1,3 +1,33 @@
 page-favourite-coin {
 
+  .price-down {
+    color: #ff4d4d;
+  }
+
+  .price-up {
+    color: #5faf5f;
+  }
+
+  .price-no-change {
+    color: black;
+  }
+
+  .symbol {
+    font-weight: bold;
+  }
+
+  .duration {
+    font-weight: bold;
+  }
+
+  .coin-card:hover {
+    background: aliceblue;
+  }
+  .coin-card {
+    padding: 5%;
+    width: 100%;
+    border-bottom-style: solid;
+    border-bottom-color: #d0d0d0;
+    border-bottom-width: 2px;
+  }
 }
